--- a/group-producer/Dockerfile
+++ b/group-producer/Dockerfile
@@ -1,5 +1,4 @@
-FROM openjdk:21-jdk-slim
-WORKDIR /app
-COPY build/libs/my-app.jar app.jar
+FROM openjdk:21
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
+COPY build/libs/group-producer-0.0.1-SNAPSHOT.jar group-producer.jar
+ENTRYPOINT ["java", "-jar", "/group-producer.jar"]
