--- a/consumer/Dockerfile
+++ b/consumer/Dockerfile
@@ -1,4 +1,10 @@
-FROM openjdk:21
-EXPOSE 8082
-COPY build/libs/demo-0.0.1-SNAPSHOT.jar group-consumer.jar
-ENTRYPOINT ["java", "-jar", "/group-consumer.jar"]
+FROM gradle:8.8.0-jdk21-alpine AS build
+COPY --chown=gradle:gradle . /home/gradle/src/producer
+WORKDIR /home/gradle/src/producer
+RUN gradle build --no-daemon --stacktrace -x test
+
+FROM openjdk:21-bullseye
+EXPOSE 8080
+ARG JAR_FILE=build/libs/*.jar
+COPY --from=build /home/gradle/src/producer/build/libs/*.jar /home/app.jar
+CMD java -server -Dserver.tomcat.threads.max=200 -Duser.country=EC -Duser.language=es -Duser.timezone=America/Guayaquil -Dspring.profiles.active=default -jar /home/app.jar
