--- a/consumer/src/main/resources/application-local.yml
+++ b/consumer/src/main/resources/application-local.yml
@@ -1,11 +1,14 @@
+server:
+  port: 8082
+
 spring:
   application:
     name: group-consumer
   data:
     redis:
       database: 0
-      host: ${SPRING_REDIS_HOST}
-      port: ${SPRING_REDIS_PORT}
+      host: localhost
+      port: 6379
       timeout: 60000
 broker:
-  channel: ${BROKER_CHANNEL}
+  channel: test_channel
